--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,17 @@
 
 #Local
-spring.datasource.url=jdbc:postgresql://localhost/employeeDB
-spring.datasource.username=postgres
-spring.datasource.password=PostgreSQL
-spring.jpa.generate-ddl=true
+#spring.datasource.url=jdbc:postgresql://localhost/employeeDB
+#spring.datasource.username=postgres
+#spring.datasource.password=PostgreSQL
+#spring.jpa.generate-ddl=true
 #Local
+
+#Heroku
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl=true
 
 #spring.jackson.serialization.fail-on-empty-beans=false
 
